kubernetes/catalog/prowlarr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/prowlarr.xml
# Category: Downloaders, MediaApp-Other
# Stars: 401 | Downloads: 35208865
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      annotations:
        infraweaver.io/rebalance-memory: "true"
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr
          ports:
            - containerPort: 9696
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 9696
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 9696
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: prowlarr-data-0
              mountPath: "/config"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: prowlarr-data-0
        persistentVolumeClaim:
          claimName: prowlarr-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
      protocol: TCP
      name: webui
  type: ClusterIP
